# claude_usage

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.py  install.sh  pyproject.toml  statusline.cmd  statusline.py  statusline.sh
.github/workflows/: smoke-tests.yml
src/claude_usage_monitor/: __init__.py  __main__.py  cli.py  colors.py  formatting.py  notifications.py  oauth.py  predictions.py  quota.py  statusline.py
src/claude_usage_monitor/data/: __init__.py  tracker.py
tests/: smoke_test.py
