[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-usage-monitor"
version = "0.2.0"
description = "Claude Code statusline plugin with quota tracking, predictions, notifications, and historical usage logging."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Audran Wolfhards"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.scripts]
claude-usage-monitor = "claude_usage_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/Audran-wol/my-claude-monitor"
Issues = "https://github.com/Audran-wol/my-claude-monitor/issues"

[tool.setuptools.packages.find]
where = ["src"]
